[gd_scene load_steps=10 format=2]

[ext_resource path="res://mainMenu/mainLobbyArt.png" type="Texture" id=1]
[ext_resource path="res://mainMenu/logo.png" type="Texture" id=2]
[ext_resource path="res://fonts/Fifaks.tres" type="DynamicFont" id=3]
[ext_resource path="res://mainMenu/mainMenu.gd" type="Script" id=4]
[ext_resource path="res://fonts/Fifaks10Dev1.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=1]
resource_name = "InitMenu"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 0 ), Vector2( 463, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/Name of the game:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/NewGame:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Settings:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 71 ), Vector2( 0, 71 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitGame:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 142 ), Vector2( 0, 142 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spinning"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer2/TextureRect2:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Spinning"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer2/TextureRect2:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 82
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.792157, 0.792157, 0.792157, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_left = -400.0
margin_top = 3.0
margin_right = 401.0
margin_bottom = 3.0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer2"]
margin_right = 801.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 400, 384 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="AnimationPlayerMenu" type="AnimationPlayer" parent="."]
anims/InitMenu = SubResource( 1 )
anims/Spinning = SubResource( 3 )

[node name="AnimationPlayerLogo" type="AnimationPlayer" parent="."]
anims/Spinning = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -561.0
margin_right = 0.00585938
custom_constants/margin_right = 10
custom_constants/margin_top = 126
custom_constants/margin_left = -27
custom_constants/margin_bottom = -153

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = -27.0
margin_top = 126.0
margin_right = 551.0
margin_bottom = 921.0
size_flags_vertical = 3
custom_constants/separation = 89
alignment = 2

[node name="Name of the game" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 578.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "Project Houtou"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 578.0
margin_bottom = 353.0
custom_constants/margin_left = 240

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 240.0
margin_right = 578.0
margin_bottom = 182.0
custom_constants/separation = 31

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 338.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "New Game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 338.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 338.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 601.0
margin_right = 578.0
margin_bottom = 635.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Made by Dead Game XD, 2023"
align = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
